# database-operations-mcp

./: .coverage  .cursorrules  .gitignore  .mcpbignore  .pre-commit-config.yaml  .ps1  .ruffignore  AGENTS.md  ASSESSMENT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DATABASE_OPERATIONS_MCP_COMPREHENSIVE_PROMPT_TEMPLATE.md  DOCSTRING_IMPLEMENTATION_STATUS.md  GOLD_STATUS_ACHIEVEMENT_SUMMARY.md  INSTALL.md  MOCK_AND_FAKE_IMPLEMENTATION_ANALYSIS.md  PORTMANTEAU_REORGANIZATION_PLAN.md  PRD.md  README-python.md  README.md  REPOSITORY_EXCELLENCE_ASSESSMENT.md  SECURITY.md  TESTING_ANALYSIS.md  TOOL_CONSOLIDATION_PLAN.md  TOOL_CONSOLIDATION_SUMMARY.md  bandit-report.json  build.ps1  build_self_contained.ps1  check_env.py  check_fastmcp.py  check_fastmcp_params.py  check_mcp.py  commit_gold_status.ps1  convert_docstrings.py  database-operations-mcp-backend.spec  database-operations-mcp.dxt  debug_imports.py  diagnose_mcp.py  (+60 more)
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml  documentation.yml  feature_request.md  feature_request.yml
.github/workflows/: beta-testing.yml  build-and-release.yml  ci-cd.yml  ci.yml  dependency-updates.yml  dxt-ci.yml  manual-release.yml  release-workflow.yml  release.yml  security.yml
cursorrules/: .cursorrules-full-stack.template  .cursorrules-mcp-server.template  README.md
database_operations_mcp/: __init__.py  __main__.py  database_manager.py  mcp_server.py
database_operations_mcp/connectors/: __init__.py  chromadb_connector.py  postgresql_connector.py  sqlite_connector.py
database_operations_mcp/tools/: __init__.py  connection_tools.py  management_tools.py  query_tools.py  schema_tools.py
database_operations_mcp/utils/: __init__.py  query_helpers.py
docs/: COMPLETION_GUIDE.md  DEV_MODE_AUTH.md  DXT_BUILDING_GUIDE.md  DXT_TEMPLATE_INTEGRATION.md  Database-MCP-Assessment.md  EXTENSIONS_AND_IMPROVEMENTS_PLAN.md  FASTMCP_2.13_PERSISTENT_STORAGE_IMPLEMENTATION.md  FASTMCP_2_12_COMPLIANCE_FIX_GUIDE.md  FASTMCP_COMPATIBILITY_FIX.md  FIREFOX_OCTOBER_2025_ANALYSIS.md  FastMCP-2.11-Stateful-Upgrade-Guide.md  FastMCP-Stateful-Upgrade-Guide.md  Firefox_Bookmarks_Enhancement_Plan.md  IMPLEMENTATION_PHASED_PLAN.md  LANCEDB_CONNECTOR_PLAN.md  LANCEDB_CONNECTOR_PLAN_20260228_220939.md.bak  MCP_Revolution.md  MCP_SERVER_30MIN_CHALLENGE.md  MCP_SERVER_BUILDER_GUIDE.md  PRD.md  PRD_HandBrake_MCP.md  PROPOSAL_BOOKMARK_NOTES_REPO.md  STATUS_REPORT.md  TAILSCALE_GUIDE.md  TOOL_TESTING_AND_DOCS.md  VECTOR_DB_PLAN.md  WINDOWS_APP_ASSESSMENT.md  WINDSURF_DEBUG_GUIDE.md  WINDSURF_FIX_GUIDE.md  agentic-control.md  export_usage.md  rdf-sparql-extension-plan.md
docs-private/: TRIPLE_INITIATIVES_GUIDE.md
docs/analysis/: MCP_Revolution.md
docs/development/: Firefox_Bookmarks_Extensions_Plan.md  database_support_plan.md  rdf-sparql-extension-plan.md
docs/github/: COMPLETE_SETUP_GUIDE.md  RELEASE_CHECKLIST.md  TROUBLESHOOTING.md  WORKFLOWS.md
docs/glama/: GLAMA_AI_CRITICISM_ANALYSIS.md  GOLD_STATUS_ACHIEVED.md  GOLD_STATUS_ACHIEVEMENT_notepadpp_reference.md  GOLD_STATUS_PLAN.md  GOLD_STATUS_PROGRESS.md  GOLD_STATUS_SUMMARY.md  README.md
docs/guides/: AI_NATURAL_LANGUAGE_MCP_GUIDE.md  FastMCP-Stateful-Upgrade-Guide.md  SELF_HOSTING_GUIDE.md
docs/mcp-technical/: CLAUDE_DESKTOP_DEBUGGING.md  CONTAINERIZATION_GUIDELINES.md  MCP_PRODUCTION_CHECKLIST.md  MONITORING_STACK_DEPLOYMENT.md  README.md  TROUBLESHOOTING_FASTMCP.md
docs/mcpb-packaging/: MCPB_BUILDING_GUIDE.md  MCPB_IMPLEMENTATION_SUMMARY.md  README.md
docs/standards/: MCP_Server_Standards.md
docs/templates/: TEMPLATE_PROMPT_SYSTEM.md
dxt/: .dxtignore  README.md  build.ps1  build_dxt.py  build_dxt_with_deps.ps1  build_output.txt  dxt.json  dxt_pack_output.txt
dxt/tests/: test_dxt_package.py
mcpb/: README.md  manifest.json  mcpb.json  pyproject.toml
mcpb/docs/: MCPB_BUILDING_GUIDE.md  TOOL_DOCSTRING_MIGRATION.md  TOOL_DOCSTRING_STANDARD.md
mcpb/prompts/: database_operations_templates.md  mcp_server_templates.md
mcpb/scripts/: build-mcpb-package.ps1
mcpb/src/: __main__.py  activity_log.py  main.py  operation_types.py  tool_responses.py
native/: Cargo.toml  build.ps1  tauri.conf.json
native/capabilities/: default.json
scratch/: check_fastmcp.py
scripts/: PSScriptAnalyzerSettings.psd1  backup-repo-improvements.md  backup-repo.ps1  build-mcp-package.ps1  build-mcpb-package.ps1  cleanup.ps1  cua-nsis-config.json  database-recovery-check.ps1  fix_imports.py  fix_tool_imports.py  move_files.ps1  move_tools.py  reorganize_structure.ps1  restart_claude_and_check.py  restructure.ps1  run_tests.ps1  setup-powershell-linting.ps1  update_imports.ps1  update_imports_for_tools.py  update_tool_imports.py  update_tool_imports_v2.py
templates/: prompt_templates.md
templates/mcp_server/: .gitignore  .pre-commit-config.yaml  BRANCHING_STRATEGY.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  dxt.json  pyproject.toml  pytest.ini  requirements-dev.txt
templates/mcp_server/.github/workflows/: ci-cd.yml
templates/mcp_server/docs/: GITHUB_USAGE_GUIDE.md  MCP_Revolution.md  ai_tooling_guide_for_the_perplexed.md
templates/mcp_server/dxt/: build.ps1
templates/mcp_server/scripts/: register_tools.py  run_server.py  setup_dev_env.ps1
templates/mcp_server/src/mcp_server/: __main__.py  fastmcp_server.py  main.py  tool_discovery.py
templates/mcp_server/src/mcp_server/tools/: __init__.py  fastmcp_help.py  help.py  help_tool.py
templates/mcp_server/tests/: conftest.py  test_mcp_server.py  test_server.py  test_utils.py
test_reports/: comprehensive_test_report.txt  comprehensive_test_results.json  test_report.txt  test_results.json
tests/: __init__.py  conftest.py  run_tests.py  test_all_tools.py  test_all_tools_fixed.py  test_comprehensive.py  test_database_connection.py  test_fastmcp_init.py
web_sota/: biome.json  index.html  package-lock.json  package.json  playwright.config.ts  start.ps1  start.ps1.bak.20260508_202255  vite.config.ts
zed-extension/: Cargo.toml  extension.json  extension.toml
(+323 files in other folders)
