[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "database-operations-mcp"
version = "1.4.1"
description = "Comprehensive FastMCP 3.3 server for database operations (SQL, NoSQL, Vector) and system tools."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "chromadb>=0.4.15",
    "lancedb>=0.2.0",
    "pymongo>=4.6.0",
    "psycopg2-binary>=2.9.9",
    "duckdb>=0.9.0",
    "aiomysql>=0.2.0",
    "redis>=5.0.0",
    "aiohttp>=3.9.0",
    "rich>=13.7.0",
    "psutil>=5.9.0",
    "fastmcp>=3.3.0",
    "aiofiles>=23.2.0",
    "aiosqlite>=0.19.0",
    "pydantic>=2.5.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "prefab-ui>=0.18.0",
    "py-key-value-aio[disk]>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.0",
    "mypy>=1.7.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.6.0",
    "pyright>=1.1.0",
    "bandit>=1.7.0",
    "safety>=3.0.0",
]
ai = [
    "openai>=1.5.0",
]

[project.scripts]
database-operations-mcp = "database_operations_mcp.main:main"

[dependency-groups]
dev = [
    "ruff>=0.14.0",
    "mypy>=1.7.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "pre-commit>=3.6.0",
    "pyright>=1.1.0",
    "bandit>=1.7.0",
    "safety>=3.0.0",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "S", "UP", "RUF", "N", "A", "C4"]
ignore = ["S101", "B008", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
